--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is my first site</h1>
     <h2>With some changes</h2>
     <h3>Other dev did this</h3>
+    <a href="#">This is conflicting</a>
   </body>
 </html>
