moved styles to own folder

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <h1>This is my first site</h1>
     <h2>With some changes</h2>
     <h3>Other dev did this</h3>
+    <a href="#" class="fontSizeLarge">This is conflicting</a> <br />
+    <a href="#">This is conflicting</a> <br />
     <a href="#">This is conflicting</a>
+
+    <p class="colorGreen fontSizeLarge">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero rerum ea
+      nemo hic dolorem iusto quaerat reiciendis nesciunt necessitatibus
+      mollitia, beatae porro quisquam autem, fugit totam eaque, dolor doloremque
+      aspernatur.
+    </p>
   </body>
 </html>
